2011-05-23  Miloslav Trmač  <mitr@redhat.com>

	* doc/sigul.1.in (sign-rpm): Document --v3-signature.
	(sign-rpms): Document command.

	* tests/basic.at (get-public-key, delete-key, change-passphrase)
	(sign-text, sign-data, sign-rpm): Run the client in verbose mode when
	possible.

	* src/client.py (handle_global_options): New option --user-name.
	* doc/sigul.1.in: Document --user-name.
	* tests/basic.at (new-user, sign-text): Use --user-name to test user
	authentication and key access granting behavior.

	* tests/new-key-substitute.asc: New file.
	* tests/basic.at (new-key): Allow skipping the new-key test if
	$SIGUL_SUBSTITUTE_NEW_KEY is set.

	* src/client.py (cmd_import_key): Fix help synopsis, improve command
	description.

	* tests/basic.at (new-key): Stop sending a superfluous password.

	* doc/sign-many.py (sign_rpm): Split from main.
	(sign_rpms): New function.
	(main): Demonstrate using sign_rpm or sign_rpms.

2011-05-19  Miloslav Trmač  <mitr@redhat.com>

	* src/server_add_admin.py (main)
	* src/server_common.py (db_open)
	* src/server.py (cmd_new_user, cmd_new_key, cmd_import_key)
	(cmd_grant_key_access): Port to sqlalchemy 0.5.

	* tests/basic.at
	* tests/imported-public-key.asc
	* tests/imported-secret-key.asc
	* tests/testrpm.spec
	* tests/testsuite.at: New files.
	* configure.ac: Initialize test suite.  Define AUTOM4TE.
	* Makefile.am (TESTFILES): New variable.
	(EXTRA_DIST): Distribute the test suite.
	(src/sigul, src/sigul_bridge, src/sigul_server)
	(src/sigul_server_add_admin, src/sigul_server_create_db): Make the
	scripts executable even before installing, to allow running them from
	the test suite.
	(clean-local, check-local, installcheck-local)
	($(top_srcdir)/tests/package.m4, $(top_srcdir)/tests/testsuite)
	(atconfig): New rules.

	* src/utils.py (read_password): Raise EOFError on unexpected EOF instead
	of looping infinitely.

2011-05-09  Miloslav Trmač  <mitr@redhat.com>
