@@ -1,3 +1,9 @@
+2011-05-24  Miloslav Trmač  <mitr@redhat.com>
+
+	* src/bridge.py (SignRPMRequestType.forward_request_payload)
+	(SignRPMsSendRequestThread.__handle_one_rpm): Tell the user what has
+	happened on URLGrabError and what the failing URL was.
+
 2011-05-23  Miloslav Trmač  <mitr@redhat.com>
 
 	* doc/sigul.1.in (sign-rpm): Document --v3-signature.
